Fix image height on mobile view of Recipes project

--- a/projects/recipes/styles.css
+++ b/projects/recipes/styles.css
@@ -53,7 +53,7 @@ img {
         padding: 0 0 20px 0;
     }
 
-    img {
+    a img {
         height: 150px;
         object-fit: cover;
     }
